Стилизовал форму в подбор программы, добавил для полей все нужные состояния, сделал для всех состояний

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -446,7 +446,7 @@
             <span class="copyright__link-html-academy">HTML Academy</span>
             <img
               class="copyright__html-academy-icon"
-              src="./img/html-academy-icon-mobile.svg"
+              src="./img/html-academy-icon.svg"
               width="27"
               height="34"
               alt="Логотип html academy"
