Стилизовал секцию дополнительно под все сосотояния, добавил кнопке состояние

--- a/src/form.html
+++ b/src/form.html
@@ -228,7 +228,9 @@
               class="additionally__fields-container fields-container fields-container--additionally"
             >
               <legend class="visually-hidden">Выберите дополнительно</legend>
-              <label class="additionally__field-label">
+              <label
+                class="additionally__field-label field-label field-label--black"
+              >
                 <input
                   class="additionally__field-input"
                   type="checkbox"
@@ -236,39 +238,48 @@
                   checked
                   required
                 />
-                Сахарозаменитель
+                <span class="additionally__field-text">Сахарозаменитель</span>
               </label>
-              <label class="additionally__field-label">
+              <label
+                class="additionally__field-label field-label field-label--black"
+              >
                 <input
                   class="additionally__field-input"
                   type="checkbox"
                   name="drinking-water"
                   required
                 />
-                Питьевая вода
+                <span class="additionally__field-text">Питьевая вода</span>
               </label>
-              <label class="additionally__field-label">
+              <label
+                class="additionally__field-label field-label field-label--black"
+              >
                 <input
                   class="additionally__field-input"
                   type="checkbox"
                   name="milk"
                   required
                 />
-                Молоко
+                <span class="additionally__field-text">Молоко</span>
               </label>
-              <label class="additionally__field-label">
+              <label
+                class="additionally__field-label field-label field-label--black"
+              >
                 <input
                   class="additionally__field-input"
                   type="checkbox"
                   name="vitamins"
                   required
                 />
-                Витамины
+                <span class="additionally__field-text">Витамины</span>
               </label>
             </fieldset>
 
             <div class="additionally__send-container">
-              <button class="additionally__button-send button" type="submit">
+              <button
+                class="additionally__button-send button button--primary"
+                type="submit"
+              >
                 Отправить заявку
               </button>
               <small class="additionally__required-field"
