убрал класс в location

--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,7 @@
       </section>
 
       <!-- Локация -->
-      <section class="location location">
+      <section class="location">
         <div class="location__wrapper container">
           <div class="location__address-wrapper location-address-wrapper">
             <h2 class="location__address-wrapper-title">
