Скопировал код из копии файлов - блоков, удалил копии блоков

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -268,23 +268,27 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card catalog-card--show-more">
+            <li
+              class="catalog-list__item catalog-list__item--show-more catalog-card catalog-card--show-more"
+            >
               <img
                 class="catalog-card__image catalog-card__image--show-more"
                 src="./img/catalog-show-more-mobile.svg"
-                width="60"
-                height="60"
+                width="30"
+                height="30"
                 alt="показать ещё"
               />
               <h3
-                class="catalog-card__heading catalog-card__heading--show-more"
+                class="catalog-card__heading catalog-card__heading--show-more catalog-card__heading--show-more"
               >
                 Показать еще 100500 товаров
               </h3>
-              <p class="catalog-card__text">
+              <p class="catalog-card__text catalog-card__text--show-more">
                 На самом деле вкусов гораздо больше!
               </p>
-              <a class="catalog-card__button button button--secondary" href="#"
+              <a
+                class="catalog-card__button catalog-card__button--show-more button button--secondary"
+                href="#"
                 >Показать все</a
               >
             </li>
@@ -295,7 +299,7 @@
       <!-- Дополнительные товары -->
       <section class="additional-product">
         <div class="additional-product__wrapper container">
-          <h2 class="additional-product__title title title--medium">
+          <h2 class="additional-product__title title title--small">
             Дополнительные товары
           </h2>
           <div class="additional-product__content-wrapper">
@@ -363,6 +367,16 @@
                 height="290"
                 alt="Подарок"
               />
+              <img
+                class="gift__image-icon"
+                src="./img/gift-icon-mobile.svg"
+                width="78"
+                height="80"
+                alt="получить подарок для кота"
+              />
+              <p class="gift__text">
+                Закажите все и получите чехол для кота в подарок!
+              </p>
             </div>
           </div>
         </div>
