Стилизовал блок с изображением кота при покупке товара в подарок для всех состояний

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -306,54 +306,64 @@
             <ul class="additional-product__list additional-product-list">
               <li class="additional-product-list__item">
                 <h3 class="additional-product-list__title">Сахарозаменитель</h3>
-                <div class="additional-product__amount">
-                  <span class="additional-product__amount-package"
+                <div class="additional-product-list__amount">
+                  <span class="additional-product-list__amount-package"
                     >1 упаковка (100 г)</span
                   >
-                  <span class="additional-product__amount-price">200 ₽</span>
+                  <span class="additional-product-list__amount-price"
+                    >200 ₽</span
+                  >
                 </div>
                 <a
-                  class="additional-product__button button button--primary"
+                  class="additional-product-list__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
               </li>
               <li class="additional-product-list__item">
                 <h3 class="additional-product-list__title">Питьевая вода</h3>
-                <div class="additional-product__amount">
-                  <span class="additional-product__amount-package"
+                <div class="additional-product-list__amount">
+                  <span class="additional-product-list__amount-package"
                     >5 литров</span
                   >
-                  <span class="additional-product__amount-price">50 ₽</span>
+                  <span class="additional-product-list__amount-price"
+                    >50 ₽</span
+                  >
                 </div>
                 <a
-                  class="additional-product__button button button--primary"
+                  class="additional-product-list__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
               </li>
               <li class="additional-product-list__item">
                 <h3 class="additional-product-list__title">Молоко</h3>
-                <div class="additional-product__amount">
-                  <span class="additional-product__amount-package">1 литр</span>
-                  <span class="additional-product__amount-price">100 ₽</span>
+                <div class="additional-product-list__amount">
+                  <span class="additional-product-list__amount-package"
+                    >1 литр</span
+                  >
+                  <span class="additional-product-list__amount-price"
+                    >100 ₽</span
+                  >
                 </div>
                 <a
-                  class="additional-product__button button button--primary"
+                  class="additional-product-list__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
               </li>
               <li class="additional-product-list__item">
                 <h3 class="additional-product-list__title">Витамины</h3>
-                <div class="additional-product__amount">
-                  <span class="additional-product__amount-package"
+                <div class="additional-product-list__amount">
+                  <span class="additional-product-list__amount-package"
                     >1 упаковка (30 г)</span
                   >
-                  <span class="additional-product__amount-price">300 ₽</span>
+                  <span class="additional-product-list__amount-price"
+                    >300 ₽</span
+                  >
                 </div>
                 <a
-                  class="additional-product__button button button--primary"
+                  class="additional-product-list__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
@@ -362,17 +372,17 @@
             <div class="additional-product__gift gift">
               <img
                 class="gift__image"
-                src="./img/gift-image-mobile.jpg"
-                widtt="280"
-                height="290"
-                alt="Подарок"
+                src="./img/gift-image.jpg"
+                alt="Получите чехол для кота в подарок"
+                width="279"
+                height="289"
               />
               <img
-                class="gift__image-icon"
+                class="gift__icon"
                 src="./img/gift-icon-mobile.svg"
+                alt="Подарок"
                 width="78"
                 height="80"
-                alt="получить подарок для кота"
               />
               <p class="gift__text">
                 Закажите все и получите чехол для кота в подарок!
