Добавил новые переменные, добавил их вместо старых

--- a/src/form.html
+++ b/src/form.html
@@ -169,7 +169,7 @@
         </section>
 
         <!-- Контактные данные -->
-        <section class="contact-details">
+        <section class="main-form__contact-details contact-details">
           <div class="contact-details__wrapper container">
             <h2 class="contact-details__title title title--small">
               Контактные данные (владельца кота)
@@ -205,7 +205,7 @@
         </section>
 
         <!-- Комментарий -->
-        <section class="comment">
+        <section class="main-form__comment comment">
           <div class="comment__wrapper container">
             <h2 class="comment__title title title--small">Комментарий</h2>
             <label class="comment__field-label">
@@ -219,7 +219,7 @@
         </section>
 
         <!-- Дополнительно -->
-        <section class="additionally">
+        <section class="main-form__additionally additionally">
           <div class="additionally__wrapper container">
             <h2 class="additionally__title title title--small">
               Дополнительно
