Добавил радио-кнопки в форму

--- a/src/form.html
+++ b/src/form.html
@@ -121,7 +121,7 @@
                   class="program-selection__field-label program-selection__field-label--program field-label field-label--black"
                 >
                   <input
-                    class="program-selection__field-input program-selection__field-input--radio field-input"
+                    class="program-selection__field-input program-selection__field-input--program field-input"
                     type="radio"
                     name="Программа"
                     value="weight-loss"
@@ -129,7 +129,10 @@
                     checked
                   />
                   <span
-                    class="program-selection__field-text program-selection__field-text--radio"
+                    class="program-selection__control-mark program-selection__control-mark--program"
+                  ></span>
+                  <span
+                    class="program-selection__field-text program-selection__field-text--program"
                     >Похудение</span
                   >
                 </label>
@@ -137,14 +140,17 @@
                   class="program-selection__field-label program-selection__field-label--program field-label field-label--black"
                 >
                   <input
-                    class="program-selection__field-input program-selection__field-input--radio field-input"
+                    class="program-selection__field-input program-selection__field-input--program field-input"
                     type="radio"
                     name="Программа"
                     name="weight-gain"
                     required
                   />
                   <span
-                    class="program-selection__field-text program-selection__field-text--radio"
+                    class="program-selection__control-mark program-selection__control-mark--program"
+                  ></span>
+                  <span
+                    class="program-selection__field-text program-selection__field-text--program"
                     >Набор массы</span
                   >
                 </label>
@@ -152,14 +158,17 @@
                   class="program-selection__field-label program-selection__field-label--program field-label field-label--black"
                 >
                   <input
-                    class="program-selection__field-input program-selection__field-input--radio field-input"
+                    class="program-selection__field-input program-selection__field-input--program field-input"
                     type="radio"
                     name="Программа"
                     value="your-advice"
                     required
                   />
                   <span
-                    class="program-selection__field-text program-selection__field-text--radio"
+                    class="program-selection__control-mark program-selection__control-mark--program"
+                  ></span>
+                  <span
+                    class="program-selection__field-text program-selection__field-text--program"
                     >Не знаю (Нужен ваш совет)</span
                   >
                 </label>
