Добавил чекбоксы в форму

--- a/src/form.html
+++ b/src/form.html
@@ -247,6 +247,7 @@
                   checked
                   required
                 />
+                <span class="additionally__control-mark"></span>
                 <span class="additionally__field-text">Сахарозаменитель</span>
               </label>
               <label
@@ -258,6 +259,7 @@
                   name="drinking-water"
                   required
                 />
+                <span class="additionally__control-mark"></span>
                 <span class="additionally__field-text">Питьевая вода</span>
               </label>
               <label
@@ -269,6 +271,7 @@
                   name="milk"
                   required
                 />
+                <span class="additionally__control-mark"></span>
                 <span class="additionally__field-text">Молоко</span>
               </label>
               <label
@@ -280,6 +283,7 @@
                   name="vitamins"
                   required
                 />
+                <span class="additionally__control-mark"></span>
                 <span class="additionally__field-text">Витамины</span>
               </label>
             </fieldset>
