--- a/src/form.html
+++ b/src/form.html
@@ -197,6 +197,24 @@
                   value="kuklachev@gmail.com"
                   required
                 />
+                <svg
+                  class="contact-details__field-icon"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="email-stroke 1">
+                    <path
+                      id="Vector"
+                      d="M1.5 8.5V16.5H18.5V8.5M1.5 3.5H18.5V5.5L10 11.5L1.5 5.5V3.5Z"
+                      stroke="black"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                </svg>
               </label>
               <label class="contact-details__field-label field-label"
                 ><span class="contact-details__input-text"> Телефон:*</span>
@@ -208,6 +226,24 @@
                   value="8 (960) 900-60-90"
                   required
                 />
+                <svg
+                  class="contact-details__field-icon"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="phone-stroke 1">
+                    <path
+                      id="Vector"
+                      d="M10 10H18.5M18.5 10L16 7.5M18.5 10L16 12.5M8.5 2.5V7.5H5.5V12.5H8.5V17.5H6C4.5 17.5 3.5 16.5 3.5 15V5C3.5 3.5 4.5 2.5 6 2.5H8.5Z"
+                      stroke="black"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                </svg>
               </label>
             </fieldset>
           </div>
