Добавил адаптивные иконки в вид-программах для каждого разрешения

--- a/src/index.html
+++ b/src/index.html
@@ -153,13 +153,29 @@
             <div class="program-type__content">
               <div class="program-type__wrapper-name">
                 <div class="program-type__icon program-type__icon--weight-loss">
-                  <img
-                    class="program-type__icon-image"
-                    src="./img/cat-slim-mobile.svg"
-                    width="36"
-                    height="50"
-                    alt="программа похудение кота"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1440px)"
+                      srcset="./img/cat-slim-tablet.svg"
+                      width="70"
+                      height="97"
+                      alt="программа похудение кота"
+                    />
+                    <source
+                      media="(min-width: 769px)"
+                      srcset="./img/cat-slim-tablet.svg"
+                      width="140"
+                      height="194"
+                      alt="программа похудение кота"
+                    />
+                    <img
+                      class="program-type__icon-image program-type__icon-image--weight-loss"
+                      src="./img/cat-slim-mobile.svg"
+                      width="36"
+                      height="50"
+                      alt="программа похудение кота"
+                    />
+                  </picture>
                 </div>
                 <h2 class="program-type__title title title--small">
                   Похудение
@@ -210,13 +226,29 @@
             <div class="program-type__content">
               <div class="program-type__wrapper-name">
                 <div class="program-type__icon program-type__icon--weight-gain">
-                  <img
-                    class="program-type__icon-image"
-                    src="./img/cat-pro-mobile.svg"
-                    width="67"
-                    height="28"
-                    alt="программа набор массы кота"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1440px)"
+                      srcset="./img/cat-pro-desktop.svg"
+                      width="134"
+                      height="56"
+                      alt="программа набор массы кота"
+                    />
+                    <source
+                      media="(min-width: 769px)"
+                      srcset="./img/cat-pro-tablet.svg"
+                      width="268"
+                      height="112"
+                      alt="программа набор массы кота"
+                    />
+                    <img
+                      class="program-type__icon-image program-type__icon-image--weight-gain"
+                      src="./img/cat-pro-mobile.svg"
+                      width="67"
+                      height="28"
+                      alt="программа набор массы кота"
+                    />
+                  </picture>
                 </div>
                 <h2 class="program-type__title title title--small">
                   Набор массы
