Приступил к каталогу, добавил изображения для карточек

--- a/src/index.html
+++ b/src/index.html
@@ -98,28 +98,20 @@
           <picture>
             <source
               media="(min-width: 1440px)"
-              srcset="img/program-package-desktop-2x.png 2x"
-              width="552"
-              height="499"
-              alt="Функциональное питание со вкусом курицы"
-            />
-            <source
-              media="(min-width: 1440px)"
-              srcset="img/program-package-desktop.png"
+              srcset="
+                img/program-package-desktop.png    1x,
+                img/program-package-desktop-2x.png 2x
+              "
               width="552"
               height="499"
               alt="Функциональное питание со вкусом курицы"
             />
             <source
               media="(min-width: 769px)"
-              srcset="img/program-package-tablet-2x.png 2x"
-              width="709"
-              height="609"
-              alt="Функциональное питание со вкусом курицы"
-            />
-            <source
-              media="(min-width: 769px)"
-              srcset="img/program-package-tablet.png"
+              srcset="
+                img/program-package-tablet.png    1x,
+                img/program-package-tablet-2x.png 2x
+              "
               width="709"
               height="609"
               alt="Функциональное питание со вкусом курицы"
