--- a/src/catalog.html
+++ b/src/catalog.html
@@ -90,13 +90,32 @@
           <h2 class="catalog__title title title--large">Каталог продукции</h2>
           <ul class="catalog__list catalog-list">
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-1-desktop.png    1x,
+                    ./img/catalog/catalog-1-desktop-2x.png 2x
+                  "
+                  width="161"
+                  height="172"
+                  alt="Кэт энерджи курица"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-1-tablet.png    1x,
+                    ./img/catalog/catalog-1-tablet-2x.png 2x
+                  "
+                  width="161"
+                  height="172"
+                  alt="Кэт энерджи курица"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-1-mobile.png"
-                width="68"
-                height="86"
-                alt="Кэт энерджи курица"
-              />
+                srcset=./img/catalog/catalog-1-mobile-2x.png 2x; width="68"
+                height="86" alt="Кэт энерджи курица" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
                 <div class="catalog-card__compound-container">
@@ -119,13 +138,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-2-desktop.png    1x,
+                    ./img/catalog/catalog-2-desktop-2x.png 2x
+                  "
+                  width="172"
+                  height="196"
+                  alt="Кэт энерджи курица"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-2-tablet.png    1x,
+                    ./img/catalog/catalog-2-tablet-2x.png 2x
+                  "
+                  width="168"
+                  height="206"
+                  alt="Кэт энерджи курица"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-2-mobile.png"
-                width="84"
-                height="100"
-                alt="Кэт энерджи курица"
-              />
+                srcset=./img/catalog/catalog-2-mobile-2x.png 2x; width="84"
+                height="100" alt="Кэт энерджи курица" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
                 <div class="catalog-card__compound-container">
@@ -148,13 +186,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-3-desktop.png    1x,
+                    ./img/catalog/catalog-3-desktop-2x.png 2x
+                  "
+                  width="163"
+                  height="174"
+                  alt="Кэт энерджи рыба"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-3-tablet.png    1x,
+                    ./img/catalog/catalog-3-tablet-2x.png 2x
+                  "
+                  width="163"
+                  height="174"
+                  alt="Кэт энерджи рыба"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-3-mobile.png"
-                width="68"
-                height="78"
-                alt="Кэт энерджи рыба"
-              />
+                srcset=./img/catalog/catalog-3-mobile-2x.png 2x; width="68"
+                height="78" alt="Кэт энерджи рыба" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
                 <div class="catalog-card__compound-container">
@@ -177,13 +234,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-4-desktop.png    1x,
+                    ./img/catalog/catalog-4-desktop-2x.png 2x
+                  "
+                  width="172"
+                  height="196"
+                  alt="Кэт энерджи рыба"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-4-tablet.png    1x,
+                    ./img/catalog/catalog-4-tablet-2x.png 2x
+                  "
+                  width="168"
+                  height="200"
+                  alt="Кэт энерджи рыба"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-4-mobile.png"
-                width="84"
-                height="100"
-                alt="Кэт энерджи рыба"
-              />
+                srcset=./img/catalog/catalog-4-mobile-2x.png 2x; width="84"
+                height="100" alt="Кэт энерджи рыба" /> />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
                 <div class="catalog-card__compound-container">
@@ -206,9 +282,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img class="catalog-card__image"
-              src="./img/catalog/catalog-5-mobile.png" width="68" height=78"
-              alt="Кэт энерджи гречка" />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-5-desktop.png    1x,
+                    ./img/catalog/catalog-5-desktop-2x.png 2x
+                  "
+                  width="161"
+                  height="171"
+                  alt="Кэт энерджи гречка"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-5-tablet.png    1x,
+                    ./img/catalog/catalog-5-tablet-2x.png 2x
+                  "
+                  width="161"
+                  height="171"
+                  alt="Кэт энерджи гречка"
+                />
+                <img class="catalog-card__image"
+                src="./img/catalog/catalog-5-mobile.png"
+                srcset=./img/catalog/catalog-5-mobile-2x.png 2x; width="68"
+                height="78" alt="Кэт энерджи гречка" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
                 <div class="catalog-card__compound-container">
@@ -231,13 +330,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-6-desktop.png    1x,
+                    ./img/catalog/catalog-6-desktop-2x.png 2x
+                  "
+                  width="172"
+                  height="196"
+                  alt="Кэт энерджи гречка"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-6-tablet.png    1x,
+                    ./img/catalog/catalog-6-tablet-2x.png 2x
+                  "
+                  width="168"
+                  height="200"
+                  alt="Кэт энерджи гречка"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-6-mobile.png"
-                width="84"
-                height="100"
-                alt="Кэт энерджи гречка"
-              />
+                srcset=./img/catalog/catalog-6-mobile-2x.png 2x; width="84"
+                height="100" alt="Кэт энерджи гречка" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Slim 1000 г</h3>
                 <div class="catalog-card__compound-container">
@@ -260,13 +378,32 @@
               >
             </li>
             <li class="catalog-list__item catalog-card">
-              <img
-                class="catalog-card__image"
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="
+                    ./img/catalog/catalog-7-desktop.png    1x,
+                    ./img/catalog/catalog-7-desktop-2x.png 2x
+                  "
+                  width="163"
+                  height="174"
+                  alt="Кэт энерджи рис"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="
+                    ./img/catalog/catalog-7-tablet.png    1x,
+                    ./img/catalog/catalog-7-tablet-2x.png 2x
+                  "
+                  width="163"
+                  height="174"
+                  alt="Кэт энерджи рис"
+                />
+                <img class="catalog-card__image"
                 src="./img/catalog/catalog-7-mobile.png"
-                width="72"
-                height="84"
-                alt="Кэт энерджи рис"
-              />
+                srcset=./img/catalog/catalog-7-mobile-2x.png 2x; width="72"
+                height="84" alt="Кэт энерджи рис" />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
                 <div class="catalog-card__compound-container">
@@ -291,13 +428,22 @@
             <li
               class="catalog-list__item catalog-list__item--show-more catalog-card catalog-card--show-more"
             >
-              <img
-                class="catalog-card__image catalog-card__image--show-more"
-                src="./img/catalog-show-more-mobile.svg"
-                width="30"
-                height="30"
-                alt="показать ещё"
-              />
+              <picture>
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog-show-more-tablet.svg"
+                  width="60"
+                  height="60"
+                  alt="показать ещё"
+                />
+                <img
+                  class="catalog-card__image catalog-card__image--show-more"
+                  src="./img/catalog-show-more-mobile.svg"
+                  width="30"
+                  height="30"
+                  alt="показать ещё"
+                />
+              </picture>
               <h3
                 class="catalog-card__heading catalog-card__heading--show-more catalog-card__heading--show-more"
               >
